ref bot init