@@ -17,6 +17,7 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import org.telegram.telegrambots.updatesreceivers.DefaultBotSession;
+import ru.kevdev.PvDeclarationBot.model.Bot;
 import ru.kevdev.PvDeclarationBot.model.Declaration;
 import ru.kevdev.PvDeclarationBot.model.Product;
 import ru.kevdev.PvDeclarationBot.model.User;
@@ -28,7 +29,7 @@ import static ru.kevdev.PvDeclarationBot.utils.Constant.*;
 
 @Service
 @RequiredArgsConstructor
-public class BotService extends TelegramLongPollingBot {
+public class BotService {
 	@Value("${bot-name}")
 	private String botName;
 	@Value("${bot-token}")
@@ -43,221 +44,190 @@ public class BotService extends TelegramLongPollingBot {
 	private String curCbq;
 	private InlineKeyboardMarkup kb;
 
-	@Override
-	public String getBotUsername() {
-		return botName;
-	}
-
-	@Override
-	public String getBotToken() {
-		return botToken;
-	}
-
-	@EventListener({ContextRefreshedEvent.class})
-	public void init() {
-		try {
-			TelegramBotsApi telegramBotsApi = new TelegramBotsApi(DefaultBotSession.class);
-			telegramBotsApi.registerBot(this);
-		} catch (TelegramApiException e) {
-			throw new RuntimeException(e);
-		}
-	}
-
-	@SneakyThrows
-	@Override
-	public void onUpdateReceived(Update update) {
-		if (update.hasMessage() && update.getMessage().hasText()) {
-			userInputProcessing(update);
-		}
-		if (update.hasCallbackQuery()) {
-			callBackQueryProcessing(update);
-		}
-	}
-
 	@SneakyThrows
 	// есть пришло сообщение через поле ввода
-	private void userInputProcessing(Update update) {
+	public void userInputProcessing(Bot bot, Update update) {
 		chatId = update.getMessage().getChatId();
 		curInput = update.getMessage().getText();
 
 		if (curInput.equalsIgnoreCase(START)) { // обработка стартовой команды
-			doStart();
+			doStart(bot);
 			return;
 		}
 		if (lastCbq != null && lastCbq.equals(AUTHORIZATION)) { //если последняя команда авторизация, значит введена почта
-			execute(collectAnswer(chatId, "Уже ищу вас..."));
-			doAuthorization(curInput);
+			bot.execute(collectAnswer(chatId, "Уже ищу вас..."));
+			doAuthorization(bot, curInput);
 			return;
 		}
-		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_ERP_CODE)) {
-			execute(collectAnswer(chatId, "Загружаю файл..."));
-			getDeclarationByErpCode(curInput, chatId);
-			return;
-		}
-		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_BARCODE)) { //если посл.команда getbybarcode, значит введено штрихкод
-			getIndustrialSites(curInput, chatId);
-			return;
-		}
-		if (lastCbq != null && lastCbq.equals(GET_MOCK_BY_ERP_CODE)) {
-			execute(collectAnswer(chatId, "Загружаю файл..."));
-			getLabelMockupsByErpCode(curInput, chatId);
-			return;
-		}
-		//обратка бессмысленного ввода в поле, например, когда ожидается ввод команды, а приходит сообщение
-		execute(collectAnswer(chatId, BAD_INPUT));
+//		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_ERP_CODE)) {
+//			execute(collectAnswer(chatId, "Загружаю файл..."));
+//			getDeclarationByErpCode(curInput, chatId);
+//			return;
+//		}
+//		if (lastCbq != null && lastCbq.equals(GET_DECL_BY_BARCODE)) { //если посл.команда getbybarcode, значит введено штрихкод
+//			getIndustrialSites(curInput, chatId);
+//			return;
+//		}
+//		if (lastCbq != null && lastCbq.equals(GET_MOCK_BY_ERP_CODE)) {
+//			execute(collectAnswer(chatId, "Загружаю файл..."));
+//			getLabelMockupsByErpCode(curInput, chatId);
+//			return;
+//		}
+//		//обратка бессмысленного ввода в поле, например, когда ожидается ввод команды, а приходит сообщение
+//		execute(collectAnswer(chatId, BAD_INPUT));
 	}
 
 	@SneakyThrows
 	//если пришло команда через кнопку
-	private void callBackQueryProcessing(Update update) {
-		chatId = update.getCallbackQuery().getMessage().getChatId();
-		curCbq = update.getCallbackQuery().getData();
-
-		if (curCbq.equalsIgnoreCase(AUTHORIZATION)) {
-			execute(collectAnswer(chatId, "Введите в текстовое поле ваш рабочий email"));
-			lastCbq = curCbq;
-			return;
-		}
-		if (curCbq.equalsIgnoreCase(GET_DECLARATION)) {
-			kb = InlineKeyboardMarkup.builder()
-					.keyboardRow(List.of(getButton("по КОДу ERP", GET_DECL_BY_ERP_CODE)))
-					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_DECL_BY_BARCODE)))
-					.build();
-			execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
-			lastCbq = curCbq;
-			return;
-		}
-		if (curCbq.equalsIgnoreCase(GET_DECL_BY_ERP_CODE)) {
-			execute(collectAnswer(chatId, "Введите код ЕРП"));
-			lastCbq = curCbq;
-			return;
-		}
-		if (curCbq.equalsIgnoreCase(GET_DECL_BY_BARCODE)) {
-			execute(collectAnswer(chatId, "Введите штрихкод"));
-			lastCbq = curCbq;
-			return;
-		}
-		if (lastCbq.equals(GET_DECL_BY_BARCODE)) {
-			getDeclarationByIndustrialSiteAndBarcode(curCbq, chatId);
-			return;
-		}
-		if (curCbq.equalsIgnoreCase(GET_QUALITY)) {
-			execute(collectAnswer(chatId, "Извиняюсь, функционал в стадии разработки"));
-			return;
-		}
-		if (curCbq.equalsIgnoreCase(GET_LABEL_MOCKUP)) {
-			kb = InlineKeyboardMarkup.builder()
-					.keyboardRow(List.of(getButton("по КОДу ERP", GET_MOCK_BY_ERP_CODE)))
-					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_MOCK_BY_BARCODE)))
-					.build();
-			execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
-			lastCbq = curCbq;
-			return;
-		}
-		execute(collectAnswer(chatId, "ОШИБКА --> Неизвестная команда"));
+	public void callBackQueryProcessing(Bot bot, Update update) {
+//		chatId = update.getCallbackQuery().getMessage().getChatId();
+//		curCbq = update.getCallbackQuery().getData();
+//
+//		if (curCbq.equalsIgnoreCase(AUTHORIZATION)) {
+//			execute(collectAnswer(chatId, "Введите в текстовое поле ваш рабочий email"));
+//			lastCbq = curCbq;
+//			return;
+//		}
+//		if (curCbq.equalsIgnoreCase(GET_DECLARATION)) {
+//			kb = InlineKeyboardMarkup.builder()
+//					.keyboardRow(List.of(getButton("по КОДу ERP", GET_DECL_BY_ERP_CODE)))
+//					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_DECL_BY_BARCODE)))
+//					.build();
+//			execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
+//			lastCbq = curCbq;
+//			return;
+//		}
+//		if (curCbq.equalsIgnoreCase(GET_DECL_BY_ERP_CODE)) {
+//			execute(collectAnswer(chatId, "Введите код ЕРП"));
+//			lastCbq = curCbq;
+//			return;
+//		}
+//		if (curCbq.equalsIgnoreCase(GET_DECL_BY_BARCODE)) {
+//			execute(collectAnswer(chatId, "Введите штрихкод"));
+//			lastCbq = curCbq;
+//			return;
+//		}
+//		if (lastCbq.equals(GET_DECL_BY_BARCODE)) {
+//			getDeclarationByIndustrialSiteAndBarcode(curCbq, chatId);
+//			return;
+//		}
+//		if (curCbq.equalsIgnoreCase(GET_QUALITY)) {
+//			execute(collectAnswer(chatId, "Извиняюсь, функционал в стадии разработки"));
+//			return;
+//		}
+//		if (curCbq.equalsIgnoreCase(GET_LABEL_MOCKUP)) {
+//			kb = InlineKeyboardMarkup.builder()
+//					.keyboardRow(List.of(getButton("по КОДу ERP", GET_MOCK_BY_ERP_CODE)))
+//					.keyboardRow(List.of(getButton("по ШТРИХКОДУ", GET_MOCK_BY_BARCODE)))
+//					.build();
+//			execute(collectAnswer(chatId, "Варианты загрузки -->", kb));
+//			lastCbq = curCbq;
+//			return;
+//		}
+//		execute(collectAnswer(chatId, "ОШИБКА --> Неизвестная команда"));
 	}
-
+//
+//	@SneakyThrows
+//	private void getDeclarationByIndustrialSiteAndBarcode(String indSiteAndBarcode, Long chatId) {
+//		//под 0 - площадка, под 1 - штрихкод
+//		String[] data = indSiteAndBarcode.split(",");
+//		List<Product> products = productRepo.findByIndustrialSiteAndBarcode(data[0], data[1]);
+//		downloadDeclaration(products);
+//		execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
+//	}
+//
+//	@SneakyThrows
+//	private void getIndustrialSites(String barcode, Long chatId) {
+//		if (isStringNotNumeric(barcode)) { //проверка что сообщение не содержит букв
+//			execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+//			return;
+//		}
+//		List<String> industrialSites = productRepo.getIndustrialSitesByProductBarcode(barcode);
+//		if (industrialSites.isEmpty()) {
+//			execute(collectAnswer(chatId, "Не найдены пром.площадки для выбора"));
+//			execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
+//			return;
+//		}
+//		InlineKeyboardMarkup kb = new InlineKeyboardMarkup();
+//		List<List<InlineKeyboardButton>> buttonsRows = new ArrayList<>();
+//		for (int i = 0; i < industrialSites.size(); i++) {
+//			buttonsRows.add(List.of(getButton(industrialSites.get(i),industrialSites.get(i) + "," + barcode)));
+//		}
+//		kb.setKeyboard(buttonsRows);
+//		execute(collectAnswer(chatId, "Выберите пром.площадку -->", kb));
+//	}
+//
+//	@SneakyThrows
+//	private void getDeclarationByErpCode(String code, Long chatId) {
+//		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
+//				execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+//			return;
+//		}
+//		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
+//		try {
+//			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
+//			if (existedProduct.isPresent()) { // если товар найден
+//				downloadDeclaration(List.of(existedProduct.get()));
+//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//			} else {
+//				execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
+//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//			}
+//		} catch (InvalidDataAccessResourceUsageException e) {
+//				execute(collectAnswer(chatId, ERROR_BAD_SQL));
+//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//		}
+//	}
+//
+//	@SneakyThrows
+//	private void getLabelMockupsByErpCode(String code, Long chatId) {
+//		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
+//			execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
+//			return;
+//		}
+//		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
+//		try {
+//			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
+//			if (existedProduct.isPresent()) { // если товар найден
+//				downloadDeclaration(List.of(existedProduct.get()));
+//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//			} else {
+//				execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
+//				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//			}
+//		} catch (InvalidDataAccessResourceUsageException e) {
+//			execute(collectAnswer(chatId, ERROR_BAD_SQL));
+//			execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//		}
+//
+//	}
+//
+//	@SneakyThrows
+//	private void downloadDeclaration(List<Product> products) {
+//		for (Product prod : products) {
+//			List<Declaration> productDeclarations = prod.getDeclarations();
+//			List<String> pathToFiles = productDeclarations.stream()
+//					.map(dec -> PATH_DIR_DECLARATIONS + dec.getFileName())
+//					.toList();
+//			List<File> files = pathToFiles.stream()
+//					.map(File::new)
+//					.toList();
+//			for (File file : files) {
+//				if (file.exists() && !file.isDirectory()) {
+//					execute(SendDocument.builder()
+//							.chatId(chatId)
+//							.document(new InputFile(file))
+//							.build());
+//				} else {
+//					execute(collectAnswer(chatId, ERROR_FILE_NOT_FOUND));
+//					execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+//				}
+//			}
+//		}
+//	}
+//
 	@SneakyThrows
-	private void getDeclarationByIndustrialSiteAndBarcode(String indSiteAndBarcode, Long chatId) {
-		//под 0 - площадка, под 1 - штрихкод
-		String[] data = indSiteAndBarcode.split(",");
-		List<Product> products = productRepo.findByIndustrialSiteAndBarcode(data[0], data[1]);
-		downloadDeclaration(products);
-		execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
-	}
-
-	@SneakyThrows
-	private void getIndustrialSites(String barcode, Long chatId) {
-		if (isStringNotNumeric(barcode)) { //проверка что сообщение не содержит букв
-			execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
-			return;
-		}
-		List<String> industrialSites = productRepo.getIndustrialSitesByProductBarcode(barcode);
-		if (industrialSites.isEmpty()) {
-			execute(collectAnswer(chatId, "Не найдены пром.площадки для выбора"));
-			execute(collectAnswer(chatId, "\nВыберите документ -->", getDocumentTypesKeyboard()));
-			return;
-		}
-		InlineKeyboardMarkup kb = new InlineKeyboardMarkup();
-		List<List<InlineKeyboardButton>> buttonsRows = new ArrayList<>();
-		for (int i = 0; i < industrialSites.size(); i++) {
-			buttonsRows.add(List.of(getButton(industrialSites.get(i),industrialSites.get(i) + "," + barcode)));
-		}
-		kb.setKeyboard(buttonsRows);
-		execute(collectAnswer(chatId, "Выберите пром.площадку -->", kb));
-	}
-
-	@SneakyThrows
-	private void getDeclarationByErpCode(String code, Long chatId) {
-		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
-				execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
-			return;
-		}
-		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
-		try {
-			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
-			if (existedProduct.isPresent()) { // если товар найден
-				downloadDeclaration(List.of(existedProduct.get()));
-				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-			} else {
-				execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
-				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-			}
-		} catch (InvalidDataAccessResourceUsageException e) {
-				execute(collectAnswer(chatId, ERROR_BAD_SQL));
-				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-		}
-	}
-
-	@SneakyThrows
-	private void getLabelMockupsByErpCode(String code, Long chatId) {
-		if (isStringNotNumeric(code)) { //проверка что сообщение не содержит букв
-			execute(collectAnswer(chatId, ERROR_INPUT_NOT_NUM));
-			return;
-		}
-		Long codeWithoutZero = cutFrontZero(code); // обрезаем впереди стоящие нули
-		try {
-			Optional<Product> existedProduct = productRepo.findById(codeWithoutZero); //todo почитать по методы чтобы избавиться от EAGER, возможно транзакции спасут
-			if (existedProduct.isPresent()) { // если товар найден
-				downloadDeclaration(List.of(existedProduct.get()));
-				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-			} else {
-				execute(collectAnswer(chatId, ERROR_PRODUCT_NOT_FOUND));
-				execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-			}
-		} catch (InvalidDataAccessResourceUsageException e) {
-			execute(collectAnswer(chatId, ERROR_BAD_SQL));
-			execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-		}
-
-	}
-
-	@SneakyThrows
-	private void downloadDeclaration(List<Product> products) {
-		for (Product prod : products) {
-			List<Declaration> productDeclarations = prod.getDeclarations();
-			List<String> pathToFiles = productDeclarations.stream()
-					.map(dec -> PATH_DIR_DECLARATIONS + dec.getFileName())
-					.toList();
-			List<File> files = pathToFiles.stream()
-					.map(File::new)
-					.toList();
-			for (File file : files) {
-				if (file.exists() && !file.isDirectory()) {
-					execute(SendDocument.builder()
-							.chatId(chatId)
-							.document(new InputFile(file))
-							.build());
-				} else {
-					execute(collectAnswer(chatId, ERROR_FILE_NOT_FOUND));
-					execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
-				}
-			}
-		}
-	}
-
-	@SneakyThrows
-	private void doAuthorization(String email) {
+	private void doAuthorization(Bot bot, String email) {
 		Optional<User> user = userService.getUser(email); //проверка в БД на наличие пользователя
 		if (user.isPresent()) {
 			chatService.saveChat(chatId, user.get());
@@ -265,20 +235,20 @@ public class BotService extends TelegramLongPollingBot {
 					.keyboardRow(List.of(getButton("ДС", GET_DECLARATION),
 							getButton("КУ", GET_QUALITY)))
 					.build();
-			execute(collectAnswer(chatId, "Успешная авторизация!"));
-			execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
+			bot.execute(collectAnswer(chatId, "Успешная авторизация!"));
+			bot.execute(collectAnswer(chatId, SELECT_DOCUMENT, getDocumentTypesKeyboard()));
 			lastInput = email;
 		} else { // если пользователя нет в БД
-			execute(collectAnswer(chatId, BAD_AUTHORIZATION));
+			bot.execute(collectAnswer(chatId, BAD_AUTHORIZATION));
 		}
 	}
 
 	@SneakyThrows
-	private void doStart() {
+	private void doStart(Bot bot) {
 		kb = InlineKeyboardMarkup.builder()
 				.keyboardRow(List.of(getButton("Авторизоваться", AUTHORIZATION)))
 				.build();
-		execute(collectAnswer(chatId,
+		bot.execute(collectAnswer(chatId,
 				"Вас приветствует Бот-Документ!\n" + "Давайте познакомимся ?",
 				kb));
 		lastInput = curInput;
@@ -306,33 +276,33 @@ public class BotService extends TelegramLongPollingBot {
 				.build();
 	}
 
-	private boolean isStringNotNumeric(String string) {
-		try {
-			Long.parseLong(string);
-			return false;
-		} catch (NumberFormatException e) {
-			return true;
-		}
-	}
-
-	private Long cutFrontZero(String code) { //Обрезает все нули спереди до первого "не ноля"
-		List<String> charList = new ArrayList<>(Arrays.asList(code.split("")));
-
-		for (Iterator<String> it = charList.iterator(); it.hasNext();) {
-			if (it.next().equals("0")) {
-				it.remove();
-			} else {
-				break;
-			}
-		}
-		return Long.parseLong(String.join("", charList));
-	}
-
-	private InlineKeyboardMarkup getDocumentTypesKeyboard() {
-		return InlineKeyboardMarkup.builder()
-				.keyboardRow(List.of(getButton("Декларация соответствия", GET_DECLARATION)))
-				.keyboardRow(List.of(getButton("Качественное удостоверение", GET_QUALITY)))
-				.keyboardRow(List.of(getButton("Макет этикетки", GET_LABEL_MOCKUP)))
-				.build();
-	}
+//	private boolean isStringNotNumeric(String string) {
+//		try {
+//			Long.parseLong(string);
+//			return false;
+//		} catch (NumberFormatException e) {
+//			return true;
+//		}
+//	}
+//
+//	private Long cutFrontZero(String code) { //Обрезает все нули спереди до первого "не ноля"
+//		List<String> charList = new ArrayList<>(Arrays.asList(code.split("")));
+//
+//		for (Iterator<String> it = charList.iterator(); it.hasNext();) {
+//			if (it.next().equals("0")) {
+//				it.remove();
+//			} else {
+//				break;
+//			}
+//		}
+//		return Long.parseLong(String.join("", charList));
+//	}
+//
+//	private InlineKeyboardMarkup getDocumentTypesKeyboard() {
+//		return InlineKeyboardMarkup.builder()
+//				.keyboardRow(List.of(getButton("Декларация соответствия", GET_DECLARATION)))
+//				.keyboardRow(List.of(getButton("Качественное удостоверение", GET_QUALITY)))
+//				.keyboardRow(List.of(getButton("Макет этикетки", GET_LABEL_MOCKUP)))
+//				.build();
+//	}
 }
